add database luu lich su nhom chat

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 all: server client
 
-server: server.c account_manager.c error.c
-	gcc -o server server.c account_manager.c error.c -lpthread
+server: server.c account_manager.c error.c dbtest.c
+	gcc -o server server.c account_manager.c error.c dbtest.c -lpthread -ldl -lm -lsqlite3
 
-client: client.c error.c util.c
-	gcc -o client client.c error.c util.c -lpthread
+client: client.c error.c util.c dbtest.c
+	gcc -o client client.c error.c util.c dbtest.c -lpthread -ldl -lm -lsqlite3
